example-k8s/pod-w-pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pv
  namespace: csitest
spec:
  containers:
  - name: nginx-pv
    image: nginx
    volumeMounts:
    - name: varwww
      mountPath: /var/www
  volumes:
  - name: varwww
    persistentVolumeClaim:
      claimName: local-pvc
