example-k8s/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  policyTypes: 
    - Egress
  podSelector:
    matchLabels:
      name: internal
  egress:
  - to: 
    - podSelector: 
        matchLabels: 
          name: payroll
    ports: 
    - port: 8080
      protocol: TCP
  - to: 
    - podSelector: 
        matchLabels: 
          name: mysql
    ports: 
    - port: 3306
      protocol: TCP
  - to: 
    ports: 
    - port: 53
      protocol: TCP
  - to: 
    ports: 
    - port: 53
      protocol: UDP
